# codex-auth-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  build.rs  compose.yaml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-29-docker-hub-compose-docs.md
docs/superpowers/specs/: 2026-06-29-docker-hub-compose-docs-design.md
src/: lib.rs  main.rs
